lst
arm-none-eabi-gcc -c -mcpu=cortex-m0plus -mthumb   -DUSE_HAL_DRIVER -DSTM32L071xx -IInc -IDrivers/STM32L0xx_HAL_Driver/Inc -IDrivers/STM32L0xx_HAL_Driver/Inc/Legacy -IDrivers/CMSIS/Device/ST/STM32L0xx/Include -IDrivers/CMSIS/Include -Og -Wall -fdata-sections -ffunction-sections -g -gdwarf-2 -MMD -MP -MF"build/adc.d" -Wa,-a,-ad,-alms=build/adc.lst Src/adc.c -o build/adc.o
In file included from Src/adc.c:41:0:
Inc/adc.h:54:8: error: unknown type name 'ADC_HandleTypeDef'
 extern ADC_HandleTypeDef hadc1;
        ^
Inc/adc.h:55:8: error: unknown type name 'ADC_HandleTypeDef'
 extern ADC_HandleTypeDef hadc2;
        ^
Src/adc.c:49:1: error: unknown type name 'ADC_HandleTypeDef'
 ADC_HandleTypeDef hadc1;
 ^
Src/adc.c:50:1: error: unknown type name 'ADC_HandleTypeDef'
 ADC_HandleTypeDef hadc2;
 ^
Src/adc.c: In function 'MX_ADC1_Init':
Src/adc.c:55:3: error: unknown type name 'ADC_ChannelConfTypeDef'
   ADC_ChannelConfTypeDef sConfig;
   ^
Src/adc.c:59:8: error: request for member 'Instance' in something not a structure or union
   hadc1.Instance = ADC1;
        ^
Src/adc.c:60:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.ScanConvMode = ADC_SCAN_DISABLE;
        ^
Src/adc.c:60:29: error: 'ADC_SCAN_DISABLE' undeclared (first use in this function)
   hadc1.Init.ScanConvMode = ADC_SCAN_DISABLE;
                             ^
Src/adc.c:60:29: note: each undeclared identifier is reported only once for each function it appears in
Src/adc.c:61:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.ContinuousConvMode = DISABLE;
        ^
Src/adc.c:62:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.DiscontinuousConvMode = DISABLE;
        ^
Src/adc.c:63:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.ExternalTrigConv = ADC_SOFTWARE_START;
        ^
Src/adc.c:63:33: error: 'ADC_SOFTWARE_START' undeclared (first use in this function)
   hadc1.Init.ExternalTrigConv = ADC_SOFTWARE_START;
                                 ^
Src/adc.c:64:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.DataAlign = ADC_DATAALIGN_RIGHT;
        ^
Src/adc.c:64:26: error: 'ADC_DATAALIGN_RIGHT' undeclared (first use in this function)
   hadc1.Init.DataAlign = ADC_DATAALIGN_RIGHT;
                          ^
Src/adc.c:65:8: error: request for member 'Init' in something not a structure or union
   hadc1.Init.NbrOfConversion = 1;
        ^
Src/adc.c:66:3: warning: implicit declaration of function 'HAL_ADC_Init' [-Wimplicit-function-declaration]
   if (HAL_ADC_Init(&hadc1) != HAL_OK)
   ^
Src/adc.c:73:10: error: request for member 'Channel' in something not a structure or union
   sConfig.Channel = ADC_CHANNEL_0;
          ^
Src/adc.c:73:21: error: 'ADC_CHANNEL_0' undeclared (first use in this function)
   sConfig.Channel = ADC_CHANNEL_0;
                     ^
Src/adc.c:74:10: error: request for member 'Rank' in something not a structure or union
   sConfig.Rank = ADC_REGULAR_RANK_1;
          ^
Src/adc.c:74:18: error: 'ADC_REGULAR_RANK_1' undeclared (first use in this function)
   sConfig.Rank = ADC_REGULAR_RANK_1;
                  ^
Src/adc.c:75:10: error: request for member 'SamplingTime' in something not a structure or union
   sConfig.SamplingTime = ADC_SAMPLETIME_1CYCLE_5;
          ^
Src/adc.c:75:26: error: 'ADC_SAMPLETIME_1CYCLE_5' undeclared (first use in this function)
   sConfig.SamplingTime = ADC_SAMPLETIME_1CYCLE_5;
                          ^
Src/adc.c:76:3: warning: implicit declaration of function 'HAL_ADC_ConfigChannel' [-Wimplicit-function-declaration]
   if (HAL_ADC_ConfigChannel(&hadc1, &sConfig) != HAL_OK)
   ^
Src/adc.c: In function 'MX_ADC2_Init':
Src/adc.c:85:3: error: unknown type name 'ADC_ChannelConfTypeDef'
   ADC_ChannelConfTypeDef sConfig;
   ^
Src/adc.c:89:8: error: request for member 'Instance' in something not a structure or union
   hadc2.Instance = ADC2;
        ^
Src/adc.c:89:20: error: 'ADC2' undeclared (first use in this function)
   hadc2.Instance = ADC2;
                    ^
Src/adc.c:90:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.ScanConvMode = ADC_SCAN_DISABLE;
        ^
Src/adc.c:90:29: error: 'ADC_SCAN_DISABLE' undeclared (first use in this function)
   hadc2.Init.ScanConvMode = ADC_SCAN_DISABLE;
                             ^
Src/adc.c:91:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.ContinuousConvMode = DISABLE;
        ^
Src/adc.c:92:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.DiscontinuousConvMode = DISABLE;
        ^
Src/adc.c:93:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.ExternalTrigConv = ADC_SOFTWARE_START;
        ^
Src/adc.c:93:33: error: 'ADC_SOFTWARE_START' undeclared (first use in this function)
   hadc2.Init.ExternalTrigConv = ADC_SOFTWARE_START;
                                 ^
Src/adc.c:94:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.DataAlign = ADC_DATAALIGN_RIGHT;
        ^
Src/adc.c:94:26: error: 'ADC_DATAALIGN_RIGHT' undeclared (first use in this function)
   hadc2.Init.DataAlign = ADC_DATAALIGN_RIGHT;
                          ^
Src/adc.c:95:8: error: request for member 'Init' in something not a structure or union
   hadc2.Init.NbrOfConversion = 1;
        ^
Src/adc.c:103:10: error: request for member 'Channel' in something not a structure or union
   sConfig.Channel = ADC_CHANNEL_1;
          ^
Src/adc.c:103:21: error: 'ADC_CHANNEL_1' undeclared (first use in this function)
   sConfig.Channel = ADC_CHANNEL_1;
                     ^
Src/adc.c:104:10: error: request for member 'Rank' in something not a structure or union
   sConfig.Rank = ADC_REGULAR_RANK_1;
          ^
Src/adc.c:104:18: error: 'ADC_REGULAR_RANK_1' undeclared (first use in this function)
   sConfig.Rank = ADC_REGULAR_RANK_1;
                  ^
Src/adc.c:105:10: error: request for member 'SamplingTime' in something not a structure or union
   sConfig.SamplingTime = ADC_SAMPLETIME_1CYCLE_5;
          ^
Src/adc.c:105:26: error: 'ADC_SAMPLETIME_1CYCLE_5' undeclared (first use in this function)
   sConfig.SamplingTime = ADC_SAMPLETIME_1CYCLE_5;
                          ^
Src/adc.c: At top level:
Src/adc.c:113:22: error: unknown type name 'ADC_HandleTypeDef'
 void HAL_ADC_MspInit(ADC_HandleTypeDef* adcHandle)
                      ^
Src/adc.c:157:24: error: unknown type name 'ADC_HandleTypeDef'
 void HAL_ADC_MspDeInit(ADC_HandleTypeDef* adcHandle)
                        ^
Makefile:171: ошибка выполнения рецепта для цели «build/adc.o»
make: *** [build/adc.o] Ошибка 1
